# avr

./: .gitmodules  LICENSE.md  README.md  clean_all.sh
arduino-ide-extensions/: README.rtf  boards.txt
arduino-ide-extensions/cores/arduino/: wiring_private.h
arduino-ide-extensions/examples/blink/: blink.ino
arduino-ide-extensions/examples/ramping/: ramping.ino
arduino-ide-extensions/variants/atmega644/: pins_arduino.h
avr-simple-rtos/: AUTHORS  README  avr-rtos-asm-defs.inc  avr-rtos-lib.c  avr-rtos.h  main.c
dependencies/FreeRTOS/: CMakeLists.txt
eclipse/I2CSonar/Release/: I2CSonar.elf  I2CSonar.map  usitwislave.d
eclipse/qenc_simulator/: main.c
eclipse/qenc_simulator/Debug/: main.d  qenc_simulator.elf  qenc_simulator.lss  qenc_simulator.map
eclipse/qenc_simulator/Release/: makefile  qenc_simulator.hex
examples/: README.md
examples/blink/: CMakeLists.txt  blink.c
examples/blink-asm/: CMakeLists.txt  blink.s
examples/blink-rs/: Cargo.toml
examples/blink-rs/.cargo/: config.toml
examples/blink-rs/src/: main.rs
examples/dram/: CMakeLists.txt
examples/dram/src/: CMakeLists.txt  dram.c  dram.h  main.c  uart.c
examples/freertos/: CMakeLists.txt  README.md
examples/freertos/include/: FreeRTOSConfig.h
examples/freertos/src/: CMakeLists.txt  blink-test.c  blink.c  uart-test.c
examples/freertos/src/srf02-test/: CMakeLists.txt  i2c.c  main.c  uart.c
examples/uart-stdio/: CMakeLists.txt
examples/uart-stdio/src/: CMakeLists.txt  main.c  uart.h
libmxx4/: Makefile
libmxx4/examples/example_timer1pwm/: example_timer1pwm.hex  example_timer1pwm.out
libmxx4/include/: i2c_slave.h  timer2pwm.h
libmxx4/src/: a2d.c  i2c.c  iusart0.c  timer1.c
mxx4/: Doxyfile
mxx4/docs/: Makefile.mxx4
mxx4/examples/example_timer1pwm/: Makefile  main.c
mxx4/include/: extint.h  iusart1.h  stdusart0.h  stdusart1.h  usartcommon.h
mxx4/src/: acomp.c  extint.c  i2c_slave.c  si2c.c  timer1servo.c  timer2pwm.c
old/: README.md
old/avr-simple-rtos/: Doxyfile  Makefile  avr-rtos-isr.s  avr-rtos-task-scheduling.s  avr-rtos-task-yield.s
old/eclipse/I2CSonar/: main.c  usitwislave.c
old/libmxx4/include/: iusart0.h  mainpage.h  timer0.h  timer1pwm.h
old/libmxx4/src/: cmucam.c  stdusart1.c
old/unsorted/a2d/: Makefile  main.c
old/unsorted/bitbang/: Makefile
old/unsorted/cmucam/: Makefile  cmucam.c  cmucam_test.hex  cmucam_test.out  fakeuart.c  fakeuart.h  main.c  test
old/unsorted/crc32/: Makefile
old/unsorted/eeprom_read/: Makefile  eeprom_read.hex  main.c
old/unsorted/hworld/: hworld.hex  main.c
old/unsorted/i2c_eeprom/: Makefile  i2c.c  i2c.h  main.c
old/unsorted/i2c_slave/: i2c_slave.lst  i2c_slave.out.map  makefile
old/unsorted/int0/: int0.lst  int0.out  int0.out.map  makefile
old/unsorted/iusart0/: Makefile  iusart0_test.hex  iusart0_test.out
old/unsorted/lb_bootloader/: Makefile  config.h  foodloader.c  uart.h
old/unsorted/lcd/: lcd.lst  lcd.out
old/unsorted/led_blink/: led_blink.elf.map  main.c
old/unsorted/mega8_i2c_slave/: m8slave.c  mega8_i2c_slave.hex
old/unsorted/microbus_test/: Makefile  generate-crc32.c  main-old.c
old/unsorted/mxlib/: Makefile
old/unsorted/mxx4lib/: acomp.h  i2c.h  timer0ctc.h  timer1.h  timer1ctc.h  timer2.h  timer2ctc.h  timer2pwm.h
projects/: README.md
projects/freertos-examples/: .gitignore  CMakeLists.txt  README.md
projects/freertos-examples/src/: CMakeLists.txt  console.c  servo-test.c  streambuffer-test.c  uart.h
projects/freertos-examples/src/srf02-test/: CMakeLists.txt  console.h  i2c.h
scripts/: clean_all.sh
unsorted/bitbang/: bitbang.c  fakeuart.c
unsorted/cmucam/: cmucam.h  script.sh
unsorted/crc32/: crc32.hex  crc32.out  main.c
unsorted/eeprom_read/: eeprom_read.out
unsorted/hworld/: Makefile  hworld.out
unsorted/i2c_slave/: i2c_slave.c  i2c_slave.hex  i2c_slave.out
unsorted/int0/: int0.c  int0.hex  makefile~
unsorted/iusart0/: main.c
unsorted/lb_bootloader/: foodloader  foodloader.hex  foodloader.lss
unsorted/lcd/: lcd.c  lcd.hex  lcd.out.map  makefile
unsorted/led_blink/: led_blink.cbp  led_blink.elf  led_blink.layout
unsorted/mega8_i2c_slave/: m8slave.lst  makefile  mega8_i2c_slave.out  mega8_i2c_slave.out.map
unsorted/microbus_test/: generate-crc32  main.c  microbus-test.hex  microbus-test.out
unsorted/mxx4lib/: a2d.h  bitbang.h  changelog  eeprom.h  i2c_slave.h  iusart0.h  servos.h  spi.h  stdusart0.h  timer0.h  timer0pwm.h  timer1pwm.h  timer1servo.h  timer1sound.h  usart0.h
unsorted/pcint0/: makefile  untitled
unsorted/servo_ctl/: main.c
unsorted/servo_ctl_t2/: servo_ctl_t2.lst  servo_ctl_t2.out
unsorted/stinger_bootloader/: Makefile~  config.h  stinger_bootloader.layout  stinger_bootloader.lss
unsorted/threading/: Makefile  avr-thread.h  main.c  threading.hex
unsorted/timer_test/: main.c  timer_test.out
unsorted/tiny85blink/: bitbang.c  tiny85blink.cbp
unsorted/tiny85i2c/: bitbang.h  si2c.h  tiny85i2c.c  usii2c.h
(+898 files in other folders)
